--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@ body {
 	background-color: aliceblue;
 }
 #res {
+ direction: rtl;
+ text-overflow: hidden;
+ white-space: nowrap;
     background-color: lightgray;
     border: solid black 2px;
     height: 30px;
