--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,29 @@
 body {
-	width: 200px;
 	background-color: aliceblue;
+	font-family: 'Courier New', Courier, monospace;
+}
+#calculator {
+	margin: auto;
+	width: 200px;
+	display: grid;
+	grid-template-columns: auto auto auto auto;
+	align-items: center;
+	justify-items: center;
 }
 #res {
+	width: 100%;
+	overflow: hidden;
+	grid-column: 1/5;
     background-color: lightgray;
     border: solid black 2px;
-    height: 30px;
+    height: 56px;
 	padding: 5px;
 	border-radius: 8px;
-    font-size: 20px;
+    font-size: 25px;
+	line-height: 28px;
+	resize: none;
+	word-wrap: none;
+	white-space: nowrap;
 }
 .btn {
 	border-radius: 50%;
@@ -43,6 +58,8 @@ body {
 	background-color: antiquewhite;
 }
 #equ {
-	margin-left: 30px;
-	margin-right: 30px;
+	grid-column: 1/3;
+}
+#clr {
+	grid-column: 3/5;
 }
